--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5",
     "fzaninotto/faker": "^1.4",
-    "mockery/mockery": "^1.0"
+    "mockery/mockery": "^1.0",
+    "laravel/laravel": ">=5.5"
   },
   "autoload": {
     "psr-4": {
