--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
-    "laravel/framework": "~5.5|~6.0|~7.0"
+    "php": ">=7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5",
