--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,8 +37,7 @@ jobs:
           mysql password: 123456
 
       - name: Install Dependencies
-        run: |
-          - composer install --no-interaction
+        run: composer install --no-interaction
 
       - name: Run test suite
         run: composer test
