--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,7 +37,10 @@ jobs:
           mysql password: 123456
 
       - name: Install Dependencies
-        run: composer install --no-interaction
+        run: |
+          composer install
+          rm -rf ./vendor/laravel/laravel/.env
+          cp -f ./.env.testing ./vendor/laravel/laravel/.env
 
       - name: Run test suite
         run: composer test
