--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^7.5|~9",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
     "laravel/laravel": ">=5.5"
